@@ -1,4 +1,14 @@
 ==============================================================
+LuaTeX 1.10.0 2019-03-15
+==============================================================
+
+This the release for TeX Live 2019. 
+Small bug fixes, code clean up.
+This is a stable release: only bug-fixes until the next TeX Live. 
+
+
+
+==============================================================
 LuaTeX 1.09.2 2019-01-19
 ==============================================================
 
